--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,7 +39,7 @@ jobs:
         run: make push
 
   cd:
-    name: CD
+    name: Kbot CD
     needs: ci
     runs-on: ubuntu-latest
 
@@ -51,7 +51,7 @@ jobs:
 
       - uses: mikefarah/yq@master
         with:
-          cmd: yq i '.image.tag=strenv(VERSION)' helm/values.yaml
+          cmd: yq -i '.image.tag=strenv(VERSION)' helm/values.yaml
 
       - run: |
           git config user.name github-actions
