--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
         run: make test
 
       - name: Build
-        run: make image
+        run: make image TARGETARCH=amd64
 
       - name: GitHub registry login
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
