--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,7 +57,7 @@ jobs:
 
       - uses: mikefarah/yq@master
         with:
-          cmd: yq -i '.image.tag=strenv(VERSION-${{ env.OS }}-${{ env.ARCH }})' helm/values.yaml
+          cmd: yq -i '.image.tag=strenv(VERSION)-strenv(${{ env.OS }}-${{ env.ARCH }})' helm/values.yaml
 
       - run: |
           git config user.name github-actions
