--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,12 +3,10 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-
 image:
   repository: viktordevopscourse
-  tag: "v1.0.4-4516915"
+  tag: "123-asd"
   arch: amd64
-
 secret:
   name: TELE_TOKEN
   tokenKey: token
