--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
         - name: {{ .Release.Name }}
           securityContext:
                 {{- toYaml .Values.securityContext | nindent 12 }}
-          image: {{ .Values.image.registry }}/{{ .Values.image.repository }}/{{ .Chart.Name }}:{{ .Values.image.tag }}-{{ .Values.image.os }}-{{ .Values.image.arch | default "amd64"}}
+          image: {{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}-{{ .Values.image.os }}-{{ .Values.image.arch | default "amd64"}}
           env:
             - name: {{ .Values.secret.name }}
               valueFrom:
